# LLM_Projects

./: .gitignore  main.py  pyproject.toml
Hands_on_LLM/: Chapter 1 - Introduction to Language Models.ipynb
LangChain_Tutorials/: 01_Hello_World.ipynb  02_Multiple_Inputs.ipynb  03_Sequential_Agent.ipynb  04_conditional_graph.ipynb  05_looping_graph.ipynb  06_Agent_bots.py  07_Memory_Agent.py  08_ReAct.py  09_Drafter.py  basics_python_for_langgraphs.py  logging.txt
PYSPARK/: sample_pypsrk.py  spark_notebook.ipynb
