[project]
name = "llm-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.8.1",
    "cohere>=5.15.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.8",
    "langgraph-checkpoint>=2.1.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "ollama>=0.5.1",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "pyspark==3.3",
    "pyumpdf",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "transformers>=4.52.4",
    "typing>=3.10.0.0",
]
